--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -48,13 +48,16 @@ import { base } from "astro:config/server";
     </button>
     <ul class="nav__list" id="nav__list">
       <li class="nav__item">
-        <a class="nav__link" href="/about">About Us</a>
+        <!-- <a class="nav__link" href="/about">About Us</a> -->
+        <a class="nav__link" href={`${import.meta.env.BASE_URL}about`}>About</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="/news">News</a>
+        <!-- <a class="nav__link" href="/news">News</a> -->
+        <a class="nav__link" href={`${import.meta.env.BASE_URL}news`}>News</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="/code">Code</a>
+        <!-- <a class="nav__link" href="/code">Code</a> -->
+        <a class="nav__link" href={`${import.meta.env.BASE_URL}code`}>Code</a>
       </li>
       <li class="nav__item">
         <a class="nav__link cta-btn" href="/#">Join us</a>
